[gd_scene load_steps=22 format=4 uid="uid://de8ab751qaaw0"]

[ext_resource type="Script" uid="uid://dt7ddty3e4n2g" path="res://scripts/final_scene.gd" id="1_bk8ll"]
[ext_resource type="PackedScene" uid="uid://14clssuaeut3" path="res://scenes/text_box.tscn" id="1_pfx17"]
[ext_resource type="Texture2D" uid="uid://c2qquddnn8cuk" path="res://assets/sprites/kenney_pico-8-platformer/default/tilemap/tilemap.png" id="2_ajlgv"]
[ext_resource type="PackedScene" uid="uid://b16d4sp2vddas" path="res://scenes/utility/world_boundary.tscn" id="3_ntgks"]
[ext_resource type="PackedScene" uid="uid://cik5n7tqd0kn2" path="res://scenes/characters/party_character.tscn" id="4_sewkk"]
[ext_resource type="PackedScene" uid="uid://cpg351ld5xkax" path="res://scenes/characters/party_character_offset.tscn" id="5_ntgks"]
[ext_resource type="PackedScene" uid="uid://bdjdmgyrqwgln" path="res://scenes/characters/party_friend.tscn" id="7_5bask"]
[ext_resource type="PackedScene" uid="uid://buip0l7sschbo" path="res://scenes/characters/player.tscn" id="8_gr7jt"]
[ext_resource type="PackedScene" uid="uid://dhqbegn3jdsh0" path="res://scenes/objects/mirror_background.tscn" id="10_1nnno"]
[ext_resource type="PackedScene" uid="uid://dhtr62chi63xp" path="res://scenes/characters/reflection.tscn" id="10_4fty2"]
[ext_resource type="PackedScene" uid="uid://dbdsaxr5f6y44" path="res://scenes/objects/mirror_foreground.tscn" id="11_5tmw6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rsfbf"]
texture = ExtResource("2_ajlgv")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, 4, -4, 4, 4, -4, 4)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, 4, 4, 4, -4, 4)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, 4, 4, -4, -4)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, -4, 4, -4, -4)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 0, -4, 0)
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
14:4/0 = 0
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, -4, 4, -4, -4)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, 4, 4, 4, -4, 4)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, 4, -4, 4, 4, -4, 4)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, 4, 4, -4, -4)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:4/0 = 0
13:4/0 = 0
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_sewkk"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rsfbf")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ntgks"]
texture = ExtResource("2_ajlgv")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, 4, -4, 4, 4, -4, 4)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, 4, 4, 4, -4, 4)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, 4, 4, -4, -4)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, -4, 4, -4, -4)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 0, -4, 0)
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
14:4/0 = 0
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, -4, 4, -4, 4, -4, -4)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, 4, 4, 4, -4, 4)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, 4, -4, 4, 4, -4, 4)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 4, 4, 4, -4, -4)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
12:4/0 = 0
13:4/0 = 0
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_5bask"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ntgks")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1nnno"]
b = Vector2(0, 16)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gr7jt"]
b = Vector2(0, 16)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5tmw6"]
b = Vector2(0, 16)

[sub_resource type="Animation" id="Animation_1nnno"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.784314)]
}

[sub_resource type="Animation" id="Animation_5tmw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8dgj"]
_data = {
&"RESET": SubResource("Animation_5tmw6"),
&"fade_in": SubResource("Animation_1nnno")
}

[node name="Level11" type="Node2D"]
script = ExtResource("1_bk8ll")

[node name="TextBox" parent="." instance=ExtResource("1_pfx17")]
unique_name_in_owner = true

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAHAAUAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAHAAUAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAGAAUAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAMAAQAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAAAAAAHAAUAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAHAAUAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAGAAUAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAHAAUAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAAAAAAHAAUAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAMAAQAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAGAAUAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAAAAAAHAAUAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAHAAUAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAHAAUAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAMAAQAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAHAAUAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAADAAQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_sewkk")
collision_enabled = false

[node name="Foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADAAcAAAALAAIAAAAEAAcAAAALAAIAAAAFAAcAAAALAAIAAAAGAAcAAAALAAIAAAAHAAcAAAALAAIAAAAIAAcAAAALAAIAAAAJAAcAAAALAAIAAAAKAAcAAAALAAIAAAALAAcAAAALAAIAAAAMAAcAAAALAAIAAAANAAcAAAALAAIAAAAOAAcAAAALAAIAAAAPAAcAAAALAAIAAAAQAAcAAAALAAIAAAARAAcAAAALAAIAAAASAAcAAAALAAIAAAATAAcAAAALAAIAAAAAAAcAAAALAAIAAAABAAcAAAALAAIAAAACAAcAAAALAAIAAAAAAAgAAAAJAAAAAAAAAAkAAAACAAAAAAAAAAoAAAAJAAEAAAAAAAsAAAACAAAAAAABAAgAAAACAAAAAAABAAkAAAACAAIAAAABAAoAAAACAAAAAAABAAsAAAACAAIAAAACAAgAAAACAAAAAAACAAkAAAACAAAAAAACAAoAAAACAAAAAAACAAsAAAACAAAAAAADAAgAAAACAAEAAAADAAkAAAACAAAAAAADAAoAAAACAAAAAAADAAsAAAACAAAAAAAEAAgAAAACAAAAAAAEAAkAAAACAAAAAAAEAAoAAAACAAAAAAAEAAsAAAACAAAAAAAFAAgAAAACAAAAAAAFAAkAAAAJAAAAAAAFAAoAAAACAAAAAAAFAAsAAAACAAAAAAAGAAgAAAACAAAAAAAGAAkAAAACAAAAAAAGAAoAAAACAAAAAAAGAAsAAAACAAAAAAAHAAgAAAACAAAAAAAHAAkAAAACAAAAAAAHAAoAAAACAAIAAAAHAAsAAAACAAAAAAAIAAgAAAACAAAAAAAIAAkAAAACAAAAAAAIAAoAAAACAAAAAAAIAAsAAAACAAAAAAAJAAgAAAACAAAAAAAJAAkAAAACAAAAAAAJAAoAAAACAAAAAAAJAAsAAAAJAAAAAAAKAAgAAAACAAAAAAAKAAkAAAACAAAAAAAKAAoAAAACAAAAAAAKAAsAAAACAAAAAAALAAgAAAACAAAAAAALAAkAAAACAAAAAAALAAoAAAACAAAAAAALAAsAAAACAAAAAAAMAAgAAAACAAAAAAAMAAkAAAACAAAAAAAMAAoAAAACAAAAAAAMAAsAAAACAAAAAAANAAgAAAACAAAAAAANAAkAAAACAAAAAAANAAoAAAACAAEAAAANAAsAAAACAAAAAAAOAAgAAAACAAAAAAAOAAkAAAACAAAAAAAOAAoAAAACAAAAAAAOAAsAAAACAAAAAAAPAAgAAAAJAAAAAAAPAAkAAAACAAAAAAAPAAoAAAACAAAAAAAPAAsAAAACAAAAAAAQAAgAAAACAAAAAAAQAAkAAAACAAAAAAAQAAoAAAACAAAAAAAQAAsAAAACAAEAAAARAAgAAAACAAAAAAARAAkAAAACAAAAAAARAAoAAAAJAAAAAAARAAsAAAACAAAAAAASAAgAAAACAAIAAAASAAkAAAACAAAAAAASAAoAAAACAAAAAAASAAsAAAACAAAAAAATAAgAAAACAAAAAAATAAkAAAAJAAEAAAATAAoAAAACAAEAAAATAAsAAAACAAAAAAA=")
tile_set = SubResource("TileSet_5bask")

[node name="WorldBoundary" parent="." instance=ExtResource("3_ntgks")]

[node name="WorldBoundary2" parent="." instance=ExtResource("3_ntgks")]
position = Vector2(160, 0)

[node name="PartyCharacters" type="Node" parent="."]

[node name="PartyCharacter" parent="PartyCharacters" instance=ExtResource("4_sewkk")]
position = Vector2(28, 20)

[node name="PartyCharacterOffset" parent="PartyCharacters" instance=ExtResource("5_ntgks")]
position = Vector2(44, 12)

[node name="PartyCharacterOffset2" parent="PartyCharacters" instance=ExtResource("5_ntgks")]
position = Vector2(60, 20)

[node name="PartyCharacter2" parent="PartyCharacters" instance=ExtResource("4_sewkk")]
position = Vector2(76, 12)

[node name="PartyCharacter3" parent="PartyCharacters" instance=ExtResource("4_sewkk")]
position = Vector2(84, 20)

[node name="PartyCharacterOffset3" parent="PartyCharacters" instance=ExtResource("5_ntgks")]
position = Vector2(100, 12)

[node name="PartyCharacterOffset4" parent="PartyCharacters" instance=ExtResource("5_ntgks")]
position = Vector2(12, 20)

[node name="PartyCharacter4" parent="PartyCharacters" instance=ExtResource("4_sewkk")]
position = Vector2(116, 12)

[node name="PartyCharacterOffset5" parent="PartyCharacters" instance=ExtResource("5_ntgks")]
position = Vector2(132, 20)

[node name="PartyCharacter5" parent="PartyCharacters" instance=ExtResource("4_sewkk")]
position = Vector2(140, 12)

[node name="PartyFriend" parent="." instance=ExtResource("7_5bask")]
position = Vector2(36, 52)

[node name="Player" parent="." instance=ExtResource("8_gr7jt")]
position = Vector2(4, 56)

[node name="FirstArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstArea"]
position = Vector2(12, 40)
shape = SubResource("SegmentShape2D_1nnno")

[node name="SecondArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondArea"]
position = Vector2(27, 40)
shape = SubResource("SegmentShape2D_gr7jt")

[node name="ThirdArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdArea"]
position = Vector2(125, 40)
shape = SubResource("SegmentShape2D_5tmw6")

[node name="Reflection" parent="." instance=ExtResource("10_4fty2")]
process_mode = 3
modulate = Color(1, 1, 1, 0)
position = Vector2(136, 52)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Reflection"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_c8dgj")
}

[node name="MirrorBackground" parent="." instance=ExtResource("10_1nnno")]
position = Vector2(136, 48)

[node name="MirrorForeground" parent="." instance=ExtResource("11_5tmw6")]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(136, 48)

[connection signal="body_entered" from="FirstArea" to="." method="_on_first_area_entered"]
[connection signal="body_entered" from="SecondArea" to="." method="_on_second_area_entered"]
[connection signal="body_entered" from="ThirdArea" to="." method="_on_third_area_entered"]
